--- a/Split_It/MainPage.xaml
+++ b/Split_It/MainPage.xaml
@@ -57,7 +57,7 @@
 
             <!--Pivot item two-->
             <phone:PivotItem Background="White" Margin="0,5,0,0" Header="{Binding Path=LocalizedResources.Expenses, Source={StaticResource LocalizedStrings}}">
-                <phone:LongListSelector Name="llsExpenses" ItemTemplate="{StaticResource expensesTemplate}" ItemRealized="llsExpenses_ItemRealized"/>
+                <phone:LongListSelector Name="llsExpenses" ItemTemplate="{StaticResource expensesTemplate}" ItemRealized="llsExpenses_ItemRealized" Tap="llsExpenses_Tap"/>
             </phone:PivotItem>
 
             <!--Pivot item three-->
