--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -21,6 +21,8 @@
         <app:PaymentImageFileConverter x:Key="PaymentImageConverter"/>
         <app:ExpenseToDateConverter x:Key="ExpenseDateConverter"/>
         <app:ExpenseAmountInCurrencyConverter x:Key="ExpenseAmountCurrencyConverter"/>
+        <app:ExpenseShareToColorConverter x:Key="ExpenseShareColorConverter"/>
+        <app:CurrentUserRepaymentsConverter x:Key="CurrentUserRepaymentsConverter"/>
     </phone:PhoneApplicationPage.Resources>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -29,15 +31,20 @@
         <phone:Pivot Title="expense detail" Foreground="White">
             <!--Pivot item one-->
             <phone:PivotItem Background="White" Margin="0,5,0,0" Header="summary">
-                <StackPanel Orientation="Vertical" Margin="12,12,0,12">
+                <StackPanel Orientation="Vertical" Margin="0,12">
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" Width="70" Height="80" Margin="0,0,8,0"/>
+                        <Image Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" Width="70" Height="80" Margin="8,0"/>
                         <StackPanel Orientation="Vertical">
                             <TextBlock x:Name="tbTitle" TextTrimming="WordEllipsis" Text="{Binding description}" Foreground="Black" Grid.Row="0" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left"/>
                             <TextBlock x:Name="tbAmount" Text="{Binding Converter={StaticResource ExpenseAmountCurrencyConverter}}" Foreground="Black" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Left" FontWeight="Bold"/>
                             <TextBlock x:Name="tbDate" Text="{Binding Converter={StaticResource ExpenseDateConverter}}" Foreground="{StaticResource settled}" Grid.Row="2" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Left"/>
                         </StackPanel>
                     </StackPanel>
+
+                    <Border Opacity="0.5" Background="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Margin="0,15">
+                        <TextBlock HorizontalAlignment="Center" Text="{Binding Converter={StaticResource CurrentUserRepaymentsConverter}}" Foreground="Black" FontSize="{StaticResource expenseDetailAmount}" Margin="0,12" />
+                    </Border>
+
                 </StackPanel>
             </phone:PivotItem>
 
