--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -35,13 +35,13 @@
                     <StackPanel Orientation="Horizontal">
                         <Image Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" Width="70" Height="80" Margin="8,0"/>
                         <StackPanel Orientation="Vertical">
-                            <TextBlock x:Name="tbTitle" TextTrimming="WordEllipsis" Text="{Binding description}" Foreground="Black" Grid.Row="0" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left"/>
+                            <TextBlock x:Name="tbTitle" TextWrapping="Wrap" Text="{Binding description}" Foreground="Black" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left"/>
                             <TextBlock x:Name="tbAmount" Text="{Binding Converter={StaticResource ExpenseAmountCurrencyConverter}}" Foreground="Black" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Left" FontWeight="Bold"/>
                             <TextBlock x:Name="tbDate" Text="{Binding Converter={StaticResource ExpenseDateConverter}}" Foreground="{StaticResource settled}" Grid.Row="2" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Left"/>
                         </StackPanel>
                     </StackPanel>
 
-                    <Border Opacity="0.5" Background="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Margin="0,15">
+                    <Border Background="{Binding users, Converter={StaticResource ExpenseShareColorConverter}, ConverterParameter='expenseDetail'}" Margin="0,15">
                         <TextBlock HorizontalAlignment="Center" Text="{Binding Converter={StaticResource CurrentUserRepaymentsConverter}}" Foreground="Black" FontSize="{StaticResource expenseDetailAmount}" Margin="0,12" />
                     </Border>
 
@@ -50,6 +50,7 @@
 
             <!--Pivot item two-->
             <phone:PivotItem Background="White" Margin="0,5,0,0" Header="notes">
+                <TextBlock TextWrapping="Wrap" Text="{Binding detail}" Foreground="Black" FontSize="{StaticResource userDetaildescriptionSize}"/>
             </phone:PivotItem>
         </phone:Pivot>
     </Grid>
