--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -41,7 +41,13 @@
                     </StackPanel>
 
                     <Border Background="{Binding users, Converter={StaticResource ExpenseShareColorConverter}, ConverterParameter='expenseDetail'}" Margin="0,15">
-                        <TextBlock HorizontalAlignment="Center" Text="{Binding Converter={StaticResource CurrentUserRepaymentsConverter}}" Foreground="Black" FontSize="{StaticResource expenseDetailAmount}" Margin="0,12" />
+                        <TextBlock HorizontalAlignment="Center" FontSize="{StaticResource expenseDetailAmount}" Margin="0,12">
+                            <TextBlock.Inlines>
+                                <Run Text="{Binding Converter={StaticResource CurrentUserRepaymentsConverter}}" Foreground="Black" />
+                                <Run Foreground="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Text="{Binding Converter={StaticResource ExpenseShareAmountConverter}}" FontWeight="Bold" />
+                                <Run Text=" for this" Foreground="Black" />
+                            </TextBlock.Inlines>
+                        </TextBlock>
                     </Border>
 
                     <phone:LongListSelector Name="llsRepayments">
