--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -45,7 +45,7 @@
                             <TextBlock.Inlines>
                                 <Run Text="{Binding Converter={StaticResource CurrentUserRepaymentsConverter}}" Foreground="Black" />
                                 <Run Foreground="{Binding users, Converter={StaticResource ExpenseShareColorConverter}}" Text="{Binding Converter={StaticResource ExpenseShareAmountConverter}}" FontWeight="Bold" />
-                                <Run Text=" for this" Foreground="Black" />
+                                <Run Text="for this." Foreground="Black" />
                             </TextBlock.Inlines>
                         </TextBlock>
                     </Border>
