display multiple currencies balance in user details
balance is still wrong

--- a/Split_It/ExpenseDetail.xaml
+++ b/Split_It/ExpenseDetail.xaml
@@ -40,7 +40,7 @@
                     <StackPanel Grid.Row="0" Orientation="Horizontal">
                         <Image Source="{Binding payment, Converter={StaticResource PaymentImageConverter}}" Width="70" Height="80" Margin="8,0"/>
                         <StackPanel Orientation="Vertical">
-                            <TextBlock x:Name="tbTitle" TextWrapping="Wrap" Text="{Binding description}" Foreground="Black" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left"/>
+                            <TextBlock x:Name="tbTitle" TextWrapping="Wrap" Text="{Binding description}" Foreground="Black" FontSize="{StaticResource userDetailnameSize}" HorizontalAlignment="Left" MaxWidth="350"/>
                             <TextBlock x:Name="tbAmount" Text="{Binding Converter={StaticResource ExpenseAmountCurrencyConverter}}" Foreground="Black" Grid.Row="1" FontSize="{StaticResource amountSize}" HorizontalAlignment="Left" FontWeight="Bold"/>
                             <TextBlock x:Name="tbDate" Text="{Binding Converter={StaticResource ExpenseDateConverter}}" Foreground="{StaticResource settled}" Grid.Row="2" FontSize="{StaticResource descriptionSize}" HorizontalAlignment="Left"/>
                         </StackPanel>
