--- a/Split_It/UserDetails.xaml
+++ b/Split_It/UserDetails.xaml
@@ -51,10 +51,10 @@
                 <Grid Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock x:Name="tbDescription" Text="{Binding balance, Converter={StaticResource BalanceDescriptionConverter}}" Foreground="{Binding balance, Converter={StaticResource BalanceColorConverter}}" Grid.Column="0" FontSize="{StaticResource userDetaildescriptionSize}" HorizontalAlignment="Left"/>
-                    <TextBlock x:Name="tbAmount" Foreground="{Binding balance, Converter={StaticResource BalanceColorConverter}}" Text="{Binding balance, Converter={StaticResource BalanceAmountConverter}}" Grid.Column="1" FontSize="{StaticResource userDetaildescriptionSize}" Visibility="{Binding balance, Converter={StaticResource BalanceVisibilityConverter}}" Margin="4,0,0,0"/>
+                    <TextBlock x:Name="tbAmount" TextWrapping="Wrap" Foreground="{Binding balance, Converter={StaticResource BalanceColorConverter}}" Text="{Binding balance, Converter={StaticResource BalanceAmountConverter}, ConverterParameter='userdetail'}" Grid.Column="1" FontSize="{StaticResource userDetaildescriptionSize}" Visibility="{Binding balance, Converter={StaticResource BalanceVisibilityConverter}}" Margin="4,0,0,0"/>
                 </Grid>
             </Grid>
 
